Updated to work with ctty v4.0.1.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(Boose_PA6 src/main.c
         src/ctty/ansi/cursor.h
         src/ctty/ansi/erase.h
         src/ctty/ansi/text-modes.h
+        src/ctty/ansi/colors.c
         src/ui/select-shot-spot.c
         src/ui/select-shot-spot.h
 )
