--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
 .vscode
 .DS_Store
-target
-Boose_PA6
 src/ctty/.gitignore
 src/ctty/.input-esc-seqs.txt
-.idea
-cmake-build-debug
-CMakeFiles
-cmake_install.cmake
-CMakeCache.txt
 Makefile
 Boose_PA6.zip
-.clang-format
 board.txt
-build
+build/**
+!CMakeLists.txt
