Added messages for ship placement.

--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
 project(ui)
 
-set(UI_SOURCES board.c board.h place-ships.c place-ships.h select-shot-spot.c select-shot-spot.h)
+set(UI_SOURCES place-ships.c place-ships.h board.c board.h select-shot-spot.c select-shot-spot.h space-print-info.h)
 add_library(ui ${UI_SOURCES})
