Updated ctty to v5.2.0

--- a/src/ctty/screen/CMakeLists.txt
+++ b/src/ctty/screen/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 project(screen C)
 
-set(SCREEN_SOURCES screen.h screen.c)
+set(SCREEN_SOURCES screen.h screen.c view-file.h view-file.c)
 add_library(screen ${SCREEN_SOURCES})
 target_link_libraries(screen ansi keypress menu)
